<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rv_background_color"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingEnd="20dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center|start"
            android:padding="12dp"
            android:src="@drawable/left_arrow"
            app:tint="@color/orange" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fragment_new_address_title"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:textStyle="bold" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:text="@string/fragment_new_address_contact_information"
                android:textColor="@color/orange"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/rv_background_color" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="20dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/profile_nav"
                    app:tint="@color/orange"/>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="25dp"
                    app:boxStrokeColor="@color/light_grey"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fragment_new_address_name" />
                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="20dp">

                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="25dp"
                    app:boxStrokeColor="@color/light_grey"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fragment_new_address_surname" />
                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="25dp"
                android:layout_marginHorizontal="20dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/outline_phone_enabled_24"
                    app:tint="@color/orange"/>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="25dp"
                    app:boxStrokeColor="@color/light_grey"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fragment_new_address_phone_number" />
                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:text="@string/fragment_new_address_address_information"
            android:textColor="@color/orange"
            android:textSize="15sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/rv_background_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/home"
                app:tint="@color/orange"/>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="25dp"
                app:boxStrokeColor="@color/light_grey"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="5"
                    android:hint="@string/fragment_new_address_address" />
            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="25dp"
            android:layout_marginHorizontal="20dp">

            <View
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="25dp"
                app:boxStrokeColor="@color/light_grey"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_new_address_address_name" />
            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>


    </LinearLayout>
</LinearLayout>

    </ScrollView>

</LinearLayout>